do not suggest to use a comma

--- a/Examples/Thesis.tex
+++ b/Examples/Thesis.tex
@@ -96,7 +96,7 @@
 	name=J\'er\'emie Gillet, % Author name
 	supervisor=Thierry Bastin, % Supervisor name
 	cosupervisor=Girish S.~Agarwal, % Co-Supervisor name, remove this line if there is none
-	submissiondate={September 2011}  % Submission date "Month, year"
+	submissiondate={September 2011}  % Submission date "Month year"
 }
 
 %-------------------------------------------------------------------------------
