--- a/Thesis.tex
+++ b/Thesis.tex
@@ -81,7 +81,7 @@
 	name=Jeremie Gillet, % Author name
 	supervisor=S.~Upervisor, % Supervisor name
 	cosupervisor=C.~O'Supervisor, % Co-Supervisor name, remove this line if there is none
-	submissiondate={March 2018}  % Submission date "Month, year"
+	submissiondate={March 2018}  % Submission date "Month year"
 }
 
 %-------------------------------------------------------------------------------
