--- a/Preamble/acknowledgments.tex
+++ b/Preamble/acknowledgments.tex
@@ -1,4 +1,4 @@
-\unnumberedchapter{Acknowledgment}
-\chapter*{Acknowledgment}
+\unnumberedchapter{Acknowledgments}
+\chapter*{Acknowledgments}
 
 Please refer to \url{https://groups.oist.jp/grad/academic-program-policies} for specifications.
