List of Abbreviations

--- a/Examples/Preamble/abbreviations.tex
+++ b/Examples/Preamble/abbreviations.tex
@@ -1,5 +1,5 @@
-\unnumberedchapter{Abbreviations}
-\chapter*{Abbreviations}
+\unnumberedchapter{List of Abbreviations}
+\chapter*{List of Abbreviations}
 
 \begin{longtable}{rl}
     PPT  & positive partial transpose                \\
