--- a/Preamble/abbreviations.tex
+++ b/Preamble/abbreviations.tex
@@ -1,5 +1,5 @@
-\unnumberedchapter{Abbreviations}
-\chapter*{Abbreviations}
+\unnumberedchapter{List of Abbreviations}
+\chapter*{List of Abbreviations}
 
 Please refer to \url{https://groups.oist.jp/grad/academic-program-policies} for specifications.
 
