Table of Contents title

--- a/Examples/Thesis.tex
+++ b/Examples/Thesis.tex
@@ -117,7 +117,8 @@
 %	LIST OF CONTENTS/FIGURES/TABLES
 %-------------------------------------------------------------------------------
 
-\unnumberedchapter{Contents}
+\unnumberedchapter{Table of Contents}
+\renewcommand\contentsname{Table of Contents}
 \tableofcontents % Write out the Table of Contents
 \unnumberedchapter{List of Figures}
 \listoffigures % Write out the List of Figures
