move title chapter up

--- a/Examples/oist_thesis.cls
+++ b/Examples/oist_thesis.cls
@@ -19,13 +19,17 @@
 %	HANDLING THE STYLE OF THE THESIS
 %-------------------------------------------------------------------------------
 
+\LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
+	
+\RequirePackage[a4paper, includehead, headheight=0.6cm, inner=3cm ,outer=2.5cm, top=2.5 cm, bottom=2.5cm]{geometry}  % Changing size of document
+
+\usepackage{titlesec} % To move the chapter title up
+\titleformat{\chapter}[display]{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
+\titlespacing{\chapter}{0pt}{0pt}{20pt} % 0 left, 0 top, 20 bottom
+
 \if@final
-	\LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
-	
-	\RequirePackage[a4paper, includehead, headheight=0.6cm, inner=3cm ,outer=2.5cm, top=2.5 cm, bottom=2.5cm]{geometry}  % Changing size of document
-	
-	\RequirePackage[bf]{caption} % caption: FIG in bold
-	\RequirePackage{emptypage} % Remove headers of empty pages
+    \RequirePackage[bf]{caption} % caption: FIG in bold
+    \RequirePackage{emptypage} % Remove headers of empty pages
 
 	\newcommand{\thesisspacing}{\singlespacing}
 	
@@ -55,9 +59,9 @@
 
 	\newcommand{\includepublications}{}
 \else
-	\LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
+	% \LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
 	
-	\RequirePackage[a4paper, includehead, headheight=0.6cm, inner=2.5cm ,outer=2.5cm, top=2.5 cm, bottom=2.5cm]{geometry}
+	% \RequirePackage[a4paper, includehead, headheight=0.6cm, inner=2.5cm ,outer=2.5cm, top=2.5 cm, bottom=2.5cm]{geometry}
 	
 	\RequirePackage[bf, font=onehalfspacing]{caption} % caption: FIG in bold, 1.5 line spacing in figure and table captions
 
