no need to clear double page

--- a/Examples/oist_thesis.cls
+++ b/Examples/oist_thesis.cls
@@ -33,8 +33,8 @@
 
 	\newcommand{\thesisspacing}{\singlespacing}
 	
+	% TODO: figure out which headers we want on one-side final thesis
 	\newcommand{\numberedchapter}{ % Preparation for numbered chapters
-		\cleardoublepage % To make sure the previous headers are passed
 		\fancyhead[RE]{{\bfseries \leftmark}} % Headers for left pages
 		\fancyhead[LO]{{\bfseries \rightmark}}
 	} % Headers for right pages
@@ -59,10 +59,6 @@
 
 	\newcommand{\includepublications}{}
 \else
-	% \LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
-	
-	% \RequirePackage[a4paper, includehead, headheight=0.6cm, inner=2.5cm ,outer=2.5cm, top=2.5 cm, bottom=2.5cm]{geometry}
-	
 	\RequirePackage[bf, font=onehalfspacing]{caption} % caption: FIG in bold, 1.5 line spacing in figure and table captions
 
 	\newcommand{\thesisspacing}{\doublespacing}
