no space between chapters in list of figures/tables

--- a/Examples/MainText/chapter5.tex
+++ b/Examples/MainText/chapter5.tex
@@ -6,7 +6,7 @@
 \begin{figure}[h]
     \captionsetup{labelformat=empty}
     \hspace{\stretch{1}} \includegraphics[width=0.75\textwidth]{Images/xkcd/xkcd7.png}
-    \caption*{\hspace{\stretch{1}}  Randall Munroe, \emph{A Bunch of Rocks} (part 7 of 9), \texttt{xkcd.com/505/} }
+    \caption{\hspace{\stretch{1}}  Randall Munroe, \emph{A Bunch of Rocks} (part 7 of 9), \texttt{xkcd.com/505/} }
 \end{figure}
 
 
