--- a/oist_thesis.cls
+++ b/oist_thesis.cls
@@ -28,7 +28,7 @@
 \titlespacing{\chapter}{0pt}{0pt}{20pt} % 0 left, 0 top, 20 bottom
 
 \if@final
-    \RequirePackage[bf]{caption} % caption: FIG in bold
+    \RequirePackage[labelfont=bf, figurewithin=none, tablewithin=none]{caption} % caption: FIG in bold, so spacing in tables
     \RequirePackage{emptypage} % Remove headers of empty pages
 
 	\newcommand{\thesisspacing}{\singlespacing}
@@ -59,7 +59,7 @@
 
 	\newcommand{\includepublications}{}
 \else
-	\RequirePackage[bf, font=onehalfspacing]{caption} % caption: FIG in bold, 1.5 line spacing in figure and table captions
+	\RequirePackage[labelfont=bf, figurewithin=none, tablewithin=none, font=onehalfspacing]{caption} % caption: FIG in bold, so spacing in tables, 1.5 line spacing in figure and table captions
 
 	\newcommand{\thesisspacing}{\doublespacing}
 
