Bibliography -> reference list

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -133,7 +133,8 @@
 %	BIBLIOGRAPHY
 %-------------------------------------------------------------------------------
 
-\unnumberedchapter{Bibliography} % Title of the unnumbered chapter
+\unnumberedchapter{Reference List} % Title of the unnumbered chapter
+\renewcommand\bibname{Reference List}
 \bibliography{Preamble/Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
 
 %-------------------------------------------------------------------------------
