add appendices line in TOC

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -142,6 +142,7 @@
 %-------------------------------------------------------------------------------
 
 \appendix
+\addtocontents{toc}{\protect\contentsline{chapter}{Appendices}{}{}} % Add title to TOC
 
 \numberedchapter % Regular chapters following
 \input{MainText/appendixA}
