smaller, sans serif fonts in captions

--- a/Examples/MainText/chapter1.tex
+++ b/Examples/MainText/chapter1.tex
@@ -2,9 +2,8 @@
 \chapter{Multipartite Entanglement Criterion from Uncertainty Relations} \label{ch-1}
 
 \begin{figure}[h]
-  \captionsetup{labelformat=empty}
   \hspace{\stretch{1}} \includegraphics[width=0.75\textwidth]{xkcd/xkcd2.png}
-  \caption{\hspace{\stretch{1}}  Randall Munroe, \emph{A Bunch of Rocks} (part 2 of 9), \texttt{xkcd.com/505/} }
+  \caption[Randall Munroe, \emph{A Bunch of Rocks} (part 2 of 9)]{Randall Munroe, \emph{A Bunch of Rocks} (part 2 of 9), \texttt{xkcd.com/505/} }
 \end{figure}
 
 
@@ -17,7 +16,6 @@ We start the chapter by introducing the Schr\"odinger-Robertson inequality and t
 In Sec.~\ref{sec-SPRTbip}, we study various different applications of the SRPT in the bipartite case, including angular momentum states of harmonic oscillators, cat states and multiphoton polarization states. In Sec.~\ref{sec-SRPTtri}, we prove that our criterion is necessary and sufficient in the case of pure tripartite qubit states. Finally, in Sec.~\ref{sec-SRPTmix} we apply the criterion to mixed states and we show that the inequality detects entanglement of bipartite Werner states better than the Bell inequalities~\cite{Bel64} and also leads to a good characterization of multipartite Werner states.
 
 \begin{table} \begin{center}
-  \caption{Some random values}
   \begin{tabular}{c|c}
       Parameter    & Value ($\times 2 \pi$~MHz) \\ \hline \hline
       $\Delta$     & 0, 150                     \\
@@ -26,7 +24,7 @@ In Sec.~\ref{sec-SPRTbip}, we study various different applications of the SRPT i
       ${\kappa}$   & 6.8                        \\
       ${\gamma}$   & 0.2
   \end{tabular}
-  \caption*{Picked from another chapter just for testing something}
+  \caption{Picked from another chapter just for testing something}
 \end{center}\end{table}
 
 \section{Schr\"odinger-Robertson Inequality} \label{sec-SRI}
