--- a/Examples/MainText/chapter5.tex
+++ b/Examples/MainText/chapter5.tex
@@ -4,9 +4,8 @@
 \chapter{Cavity Mediated Two-Photon Processes in Two Qubits Circuit QED} \label{ch-6}
 
 \begin{figure}[h]
-    \captionsetup{labelformat=empty}
     \hspace{\stretch{1}} \includegraphics[width=0.75\textwidth]{Images/xkcd/xkcd7.png}
-    \caption{\hspace{\stretch{1}}  Randall Munroe, \emph{A Bunch of Rocks} (part 7 of 9), \texttt{xkcd.com/505/} }
+    \caption[Randall Munroe, \emph{A Bunch of Rocks} (part 7 of 9)]{Randall Munroe, \emph{A Bunch of Rocks} (part 7 of 9), \texttt{xkcd.com/505/} }
 \end{figure}
 
 
