--- a/oist_thesis.cls
+++ b/oist_thesis.cls
@@ -28,11 +28,11 @@
 \titlespacing{\chapter}{0pt}{0pt}{20pt} % 0 left, 0 top, 20 bottom
 
 \if@final
-    \RequirePackage[labelfont=bf, figurewithin=none, tablewithin=none]{caption} % caption: FIG in bold, so spacing in tables
+    \RequirePackage[font={sf, small}, labelfont=bf]{caption} % caption: FIG in bold, so spacing in tables
 	\newcommand{\thesisspacing}{\singlespacing}
 	\newcommand{\includepublications}{}
 \else
-	\RequirePackage[labelfont=bf, figurewithin=none, tablewithin=none, font=onehalfspacing]{caption} % caption: FIG in bold, so spacing in tables, 1.5 line spacing in figure and table captions
+	\RequirePackage[font={onehalfspacing, sf, small}, labelfont=bf]{caption} % caption: FIG in bold, so spacing in tables, 1.5 line spacing in figure and table captions
 	\newcommand{\thesisspacing}{\doublespacing}
 	\newcommand{\includepublications}{
 		\input{./MainText/publications}
